add json-server and db.json with users

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "@types/styled-components": "^5.1.28",
+    "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
@@ -23,6 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "backend": "json-server --watch db.json --port 5000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
