--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "styled-components": "^6.0.8",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
