--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.8",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
