--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
-    "@types/react-input-mask": "^3.0.3"
+    "@types/react-input-mask": "^3.0.3",
+    "jest": "^29.7.0"
   }
 }
