--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.2.8",
     "@types/styled-components": "^5.1.28",
     "axios": "^1.5.1",
+    "framer-motion": "^10.16.4",
     "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
