--- a/package.json
+++ b/package.json
@@ -3,15 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ajna/pagination": "^1.4.19",
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.1",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/material": "^5.14.11",
-    "@mui/styled-engine-sc": "^5.14.11",
-    "@mui/x-data-grid": "^6.16.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
@@ -20,6 +16,7 @@
     "@types/react-dom": "^18.2.8",
     "@types/styled-components": "^5.1.28",
     "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
     "json-server": "^0.17.4",
     "react": "^18.2.0",
