--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.1",
+    "@tanstack/react-query": "^4.36.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.55",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
+    "@types/react-query": "^1.2.9",
     "@types/styled-components": "^5.1.28",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
