--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.1",
-    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query": "^4.0.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
@@ -27,10 +27,11 @@
     "react-icons": "^4.11.0",
     "react-input-mask": "^2.0.4",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.8",
+    "ts-jest": "^29.1.1",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
